--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </div>
                 <div class="col">
                     <div class="image image-column">
-                        <img decoding="async" src="images/ServiceMountain.jpg" alt="" />
+                        <img decoding="async" src="Images/ServiceMountain.jpg" alt="" />
                     </div>
                 </div>
             </div>
